Add a consistent comment style

--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -11,7 +11,9 @@
 $ High level wrapper and elements
 ================================================================================ */
 body {
-  /* Addresses margins handled incorrectly in IE6/7. */
+  /*
+   * Addresses margins handled incorrectly in IE6/7.
+   */
   margin: 0;
 
   font: $baseFontWeight #{$baseFontSize/16*100}%/$basicSpacing $baseFontFamily;
