--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -54,13 +54,17 @@ code,
 kbd,
 pre,
 samp {
-   /* Corrects font family set oddly in Safari 5 and Chrome. */
+  /*
+   * Corrects font family set oddly in Safari 5 and Chrome.
+   */
   font-family: $monoFontFamily;
   @if $oldIE == true { _font-family: 'courier new', monospace; }
   font-size: 1em;
 }
 pre {
-  /* Improves readability of pre-formatted text in all browsers. */
+  /*
+   * Improves readability of pre-formatted text in all browsers.
+   */
   white-space: pre-wrap;
   @extend %margin-bottom;
 }
@@ -70,13 +74,17 @@ pre {
 $ Quotes
 ================================================================================ */
 q {
-  /* Sets consistent quote types. */
+  /*
+   * Sets consistent quote types.
+   */
   quotes: "\201C" "\201D" "\2018" "\2019";
 
   @if $oldIE == true {
     &:before,
     &:after {
-      /* Addresses `quotes` property not supported in S4. */
+      /*
+       * Addresses `quotes` property not supported in S4.
+       */
       content: '';
       content: none;
     }
@@ -128,11 +136,12 @@ $ Typographic Helper Classes
 .align-left   { text-align: left; }
 .intend { padding: 0 1.5em; }
 
-/* ====================== CSS3 Word-breaker ======================
- * Break strings when their length exceeds the width of their container.
- */
+/* ====================== CSS3 Word-breaker ====================== */
 %text-break,
 .text-break {
+  /*
+   * Break strings when their length exceeds the width of their container.
+   */
   word-break: break-all;
   word-break: break-word;
   word-wrap: break-word;
