Added a slightly changed version of @paranoida 's SASS Media-Queries file
Therefore all respontTo mixins are removed, as well as the query
variables in _variables.scss

--- a/Ressources/Private/Sass/_settings/_all.scss
+++ b/Ressources/Private/Sass/_settings/_all.scss
@@ -10,3 +10,4 @@
 @import "_functions";             // SASS Functions
 @import "_variables";             // SASS Settings
 @import "_mixins";                // SASS Mixins
+@import "_media-queries";         // Media-Query SASS Mixins
