--- a/Ressources/Private/Sass/generic/_helper.scss
+++ b/Ressources/Private/Sass/generic/_helper.scss
@@ -22,7 +22,7 @@
   background-color: transparent;
   border: 0;
   overflow: hidden;
-  @if $oldIE == true {
+  @if $oldIE {
     /* IE 6/7 fallback */
     *text-indent: -9999px;
   }
@@ -79,7 +79,7 @@
  */
 .cf,
 .clearfix {
-  @if $oldIE == true {
+  @if $oldIE {
     *zoom:1;
   }
   &:before, &:after { content: ""; display: table; }
