Fix a small typo inside _navigations.scss

--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -1,5 +1,5 @@
 /*!
- * Navigation abstraction object
+ * Navigation abstraction
  *
  * @package #{$package_name()}
  * @path objects/_navigations.scss
