Set the csc-indent class margins in percentages

--- a/Ressources/Private/Sass/objects/_t3-general.scss
+++ b/Ressources/Private/Sass/objects/_t3-general.scss
@@ -20,9 +20,9 @@ $ CSC-Frames
 .csc-frame-rulerBefore { border-top: 1px $basicBorderStyle $basicBorderColor; }
 .csc-frame-rulerAfter { border-bottom: 1px $basicBorderStyle $basicBorderColor; }
 
-.csc-frame-indent { padding: 0 $layoutWidth / 10; }
-.csc-frame-indent3366 { padding-left: $layoutWidth / 3; }
-.csc-frame-indent6633 { padding-right: $layoutWidth / 3; }
+.csc-frame-indent { padding: 0 10%; }
+.csc-frame-indent3366 { padding-left: 33.333%; }
+.csc-frame-indent6633 { padding-right: 33.333%; }
 
 .csc-frame-frame1 { }
 .csc-frame-frame2 { }
