--- a/Ressources/Private/Sass/generic/_t3-general.scss
+++ b/Ressources/Private/Sass/generic/_t3-general.scss
@@ -2,7 +2,7 @@
  * Styling for typo3 related classes
  *
  * @package #{$package_name()}
- * @path objects/_t3-general.scss
+ * @path generic/_t3-general.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
 
@@ -23,6 +23,3 @@ $ CSC-Frames
 .csc-frame-indent { padding: 0 10%; }
 .csc-frame-indent3366 { padding-left: 33.333%; }
 .csc-frame-indent6633 { padding-right: 33.333%; }
-
-.csc-frame-frame1 { }
-.csc-frame-frame2 { }
