--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -26,6 +26,7 @@ $package_name: t3b_frontend;
 @import "generic/_head";              // Declarations wich should be put at the top
 @import "generic/_normalize";         // Normalize elements accross all browsers
 @import "generic/_grid";              // Grid
+@import "generic/_t3-general";        // TYPO3 element styling
 
 
 // =============================================================================
@@ -46,7 +47,6 @@ $package_name: t3b_frontend;
 // =============================================================================
 @import "objects/_buttons";           // Button object and its modifiers
 @import "objects/_navigations";       // Navigation object and its modifiers
-@import "objects/_t3-general";        // TYPO3 element styling
 
 
 // =============================================================================
