Add a proper intendation for the index.html file

--- a/Ressources/Private/Layouts/index.html
+++ b/Ressources/Private/Layouts/index.html
@@ -3,46 +3,47 @@
 <!--[if IE 7]>				<html class="no-js lt-ie9 lt-ie8" lang="de" dir="ltr"><![endif]-->
 <!--[if IE 8]>				<html class="no-js lt-ie9" lang="de" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="de" dir="ltr"><!--<![endif]-->
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<!-- RWD: <meta name="viewport" content="width=device-width" initial-scale="1"> -->
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<!-- RWD: <meta name="viewport" content="width=device-width" initial-scale="1"> -->
 
-	<link rel="stylesheet" href="../../Public/Stylesheets/main.css">
-	<script src="../../Public/Javascripts/vendor/modernizr-2.6.2.min.js"></script>
-</head>
-<body>
-<!--[if lt IE 8]><p class=chromeframe>Ihr Browser ist <em>veraltet!</em> <a href="http://browsehappy.com/">Updaten Sie ihren Browser</a> oder <a href="http://www.google.com/chromeframe/?redirect=true">installieren Sie die fehlende Erweiterung</a> um alle Funktionen zu genießen.</p><![endif]-->
+		<link rel="stylesheet" href="../../Public/Stylesheets/main.css">
+		<script src="../../Public/Javascripts/vendor/modernizr-2.6.2.min.js"></script>
+	</head>
+	<body>
+		<!--[if lt IE 8]><p class=chromeframe>Ihr Browser ist <em>veraltet!</em> <a href="http://browsehappy.com/">Updaten Sie ihren Browser</a> oder <a href="http://www.google.com/chromeframe/?redirect=true">installieren Sie die fehlende Erweiterung</a> um alle Funktionen zu genießen.</p><![endif]-->
 
-<header class="site-header" role="banner">
-	<div class="wrapper">
-		<a class="site-logo ir" href="">Logoname</a>
-		<nav role="navigation">
-			<ul class="nav site-nav">
-				<li class="active"><a href="">Lorem</a></li>
-				<li><a href="">ipsum</a></li>
-				<li><a href="">dolor</a></li>
-				<li><a href="">sit</a></li>
-				<li><a href="">amet</a></li>
-			</ul>
-		</nav>
-	</div>
-</header>
+		<header class="site-header" role="banner">
+			<div class="wrapper">
+				<a class="site-logo ir" href="">Logoname</a>
+				<nav role="navigation">
+					<ul class="nav site-nav">
+						<li class="active"><a href="">Lorem</a></li>
+						<li><a href="">ipsum</a></li>
+						<li><a href="">dolor</a></li>
+						<li><a href="">sit</a></li>
+						<li><a href="">amet</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-<div class="site-content" role="main">
-	<div class="wrapper">
+		<div class="site-content" role="main">
+			<div class="wrapper">
 
-	</div>
-</div>
+			</div>
+		</div>
 
-<footer class="site-footer" role="contentinfo">
-	<div class="wrapper">
+		<footer class="site-footer" role="contentinfo">
+			<div class="wrapper">
 
-	</div>
-</footer>
+			</div>
+		</footer>
 
 
-<!-- Grab Google CDN's jQuery, fall back to local if offline
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../Public/Assets/Javascripts/vendor/jquery-1.9.1.min.js"><\/script>')</script> -->
-</body></html>
+	<!-- Grab Google CDN's jQuery, fall back to local if offline
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="../../Public/Assets/Javascripts/vendor/jquery-1.9.1.min.js"><\/script>')</script> -->
+	</body>
+</html>
