Fixed some typos inside _tables.scss

--- a/Ressources/Private/Sass/base/_tables.scss
+++ b/Ressources/Private/Sass/base/_tables.scss
@@ -26,7 +26,7 @@ th, td { vertical-align: top; }
 /* =============================================================================
 $ Contenttable-1
 ================================================================================
- * Extends the basic border styles
+ * Extends the basic table styles
  * Bordered table with an odd & even changing background-color e.g.
  *
   <table class="contenttable-1">
@@ -75,7 +75,7 @@ $ Contenttable-1
 /* =============================================================================
 $ Contenttable-2
 ================================================================================
- * Extends the basic border styles
+ * Extends the basic table styles
  * Clean table with borders below each row e.g.
  *
   <table class="contenttable-2">
@@ -117,7 +117,7 @@ $ Contenttable-2
 /* =============================================================================
 $ Contenttable-3
 ================================================================================
- * Extends the basic border styles
+ * Extends the basic table styles
  * Clean condensed table with borders below each row e.g.
  *
   <table class="contenttable-3">
