Set a consistent inline css comment style

--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -11,7 +11,7 @@
 $ High level wrapper and elements
 ================================================================================ */
 body {
-  /*
+  /**
    * Addresses margins handled incorrectly in IE6/7.
    */
   margin: 0;
