--- a/Ressources/Private/Sass/base/_links.scss
+++ b/Ressources/Private/Sass/base/_links.scss
@@ -21,7 +21,7 @@ a {
     color: $linkColorHover;
   }
   &:focus {
-    /*
+    /**
      * Addresses `outline` inconsistency between Chrome and other browsers.
      */
     outline: thin dotted;
@@ -30,13 +30,13 @@ a {
   }
   &:active,
   &:hover {
-    /*
+    /**
      * Improves readability when focused and also mouse hovered in all browsers.
      */
     outline: 0;
   }
   p & {
-    /*
+    /**
      * Increasing the Clickable Area of Inline Links inside a paragraph
      */
     margin: -.33em;
