--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -18,7 +18,7 @@ ul {
 }
 li > ul,
 li > ol {
-	/*
+	/**
    * Remove vertical spacing from nested lists
    */
   margin-bottom: 0;
@@ -28,7 +28,7 @@ li > ol {
 /* ======================== Reset list ========================= */
 %reset-list,
 .reset-list {
-  /*
+  /**
    * Resets the standard list styles of a <ul> or <ol>
    */
   list-style: none;
@@ -45,7 +45,7 @@ dl {
 }
 @if $oldIE {
   dd {
-    /*
+    /**
      * Addresses margins set differently in IE6/7.
      */
     margin: 0 0 0 40px;
