--- a/Ressources/Private/Sass/generic/_helper.scss
+++ b/Ressources/Private/Sass/generic/_helper.scss
@@ -8,13 +8,13 @@
  */
 
 
-/*
+/**
  * Quick floats
  */
 .fl-r { float: right; }
 .fl-l { float: left; }
 
-/*
+/**
  * For image replacement
  */
 .ir,
@@ -34,7 +34,7 @@
   }
 }
 
-/*
+/**
  * Hide from both screenreaders and browsers: h5bp.com/u
  */
 .hidden {
@@ -42,7 +42,7 @@
   visibility: hidden;
 }
 
-/*
+/**
  * Hide only visually, but have it available for screenreaders: h5bp.com/v
  */
 .visuallyhidden {
@@ -56,7 +56,7 @@
   width: 1px;
 }
 
-/*
+/**
  * Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p
  */
 .visuallyhidden.focusable:active,
@@ -69,12 +69,12 @@
   width: auto;
 }
 
-/*
+/**
  * Hide visually and from screenreaders, but maintain layout
  */
 .invisible { visibility: hidden; }
 
-/*
+/**
  * Contain floats: h5bp.com/q
  */
 .cf,
