--- a/Ressources/Private/Sass/generic/_normalize.scss
+++ b/Ressources/Private/Sass/generic/_normalize.scss
@@ -12,7 +12,7 @@
 $ Normalize HTML5 display definitions
 ================================================================================ */
 
-/*
+/**
  * Corrects `block` display not defined in IE6/7/8/9 & FF3.
  */
 article,
@@ -30,7 +30,7 @@ summary {
   display: block;
 }
 
-/*
+/**
  * Corrects `inline-block` display not defined in IE 8/9.
  */
 audio,
@@ -39,7 +39,7 @@ video {
     display: inline-block;
 }
 
-/*
+/**
  * Addresses styling for `hidden` attribute not present in IE7/8/9, FF3, S4.
  * Known issue: no IE6 support.
  */
@@ -52,7 +52,7 @@ video {
  Normalize Base
 ================================================================================ */
 
-/*
+/**
  * 1. Corrects text resizing oddly in IE6/7 when body `font-size` is set using
  *    `em` units.
  * 2. Prevents iOS text size adjust after orientation change, without disabling
@@ -67,7 +67,7 @@ html {
 }
 
 @if $oldIE {
-  /*
+  /**
    * Addresses `font-family` inconsistency between `textarea` and other form
    * elements.
    */
@@ -85,7 +85,7 @@ html {
  Normalize Forms
 ================================================================================ */
 
-/*
+/**
  * 1. Corrects font size not being inherited in all browsers.
  * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome.
  * 3. Improves appearance and consistency in all browsers.
@@ -102,7 +102,7 @@ textarea {
   }
 }
 
-/*
+/**
  * Addresses FF3/4 setting `line-height` on `input` using `!important` in the
  * UA stylesheet.
  */
@@ -123,7 +123,7 @@ select {
     text-transform: none;
 }
 
-/*
+/**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
  *    and `video` controls.
  * 2. Corrects inability to style clickable `input` types in iOS.
@@ -143,7 +143,7 @@ input[type="submit"] {
   }
 }
 
-/*
+/**
  * Re-set default cursor for disabled elements.
  */
 button[disabled],
@@ -151,7 +151,7 @@ html input[disabled] {
   cursor: default;
 }
 
-/*
+/**
  * 1. Addresses box sizing set to content-box in IE8/9.
  * 2. Removes excess padding in IE8/9.
  * 3. Removes excess padding in IE7.
@@ -167,7 +167,7 @@ input[type="radio"] {
   }
 }
 
-/*
+/**
  * 1. Addresses `appearance` set to `searchfield` in S5, Chrome.
  * 2. Addresses `box-sizing` set to `border-box` in S5, Chrome (include `-moz`
  *    to future-proof).
@@ -179,7 +179,7 @@ input[type="search"] {
           box-sizing: content-box;
 }
 
-/*
+/**
  * Removes inner padding and search cancel button in S5, Chrome on OS X.
  */
 input[type="search"]::-webkit-search-cancel-button,
@@ -187,7 +187,7 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/*
+/**
  * Removes inner padding and border in FF3+.
  */
 button::-moz-focus-inner,
