--- a/Ressources/Private/Sass/generic/_print.scss
+++ b/Ressources/Private/Sass/generic/_print.scss
@@ -11,7 +11,7 @@
 @media print {
   * {
     background: transparent !important;
-    /*
+    /**
      * Black prints faster: h5bp.com/s
      */
     color: black !important;
@@ -28,7 +28,7 @@
     page-break-inside: avoid;
   }
   thead {
-    /*
+    /**
      * h5bp.com/t
      */
     display: table-header-group;
@@ -57,7 +57,7 @@
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
-  /*
+  /**
    * Don't show links for images, or javascript/internal links
    */
   .ir a:after,
