--- a/Ressources/Private/Sass/generic/_t3-general.scss
+++ b/Ressources/Private/Sass/generic/_t3-general.scss
@@ -10,7 +10,9 @@
 /* =============================================================================
 $ General stylings
 ================================================================================ */
-/* Fixes an TYPO3 IE8 float issue where images have no width */
+/**
+ * Fixes an TYPO3 4.6 IE8 float issue where images have no width
+ */
 .csc-textpic-imagecolumn img { max-width: none; }
 
 
